5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1582_1326.log
== TEST (2019-03-12 17:44:52) 
-- CODE:
print 75
-- ERROR:
File "XXXX", line 1
    print 75
           ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(75)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:45:04) 
-- CODE:
print (75)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:45:48) 
-- CODE:
print (75)
-- EXECUTION TIME:
0.128517
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:22:24) 
-- CODE:
print (40+35)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:22:37) 
-- CODE:
print (40+35)
-- EXECUTION TIME:
0.15347
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
